--- a/index.html
+++ b/index.html
@@ -13,28 +13,19 @@
   <body style = "background-color: #7FE57F;">
     <div class="rowcustom">
       <div class="map">
-
+        <img  style = "margin:300px;"src="https://picsum.photos/200" alt="">
       </div>
       <div class="img-flex">
-      <img src="https://picsum.photos/400" class=".church-img" alt="">
+        <h1>SUZINOK DAUGIAU</h1>
+      <img src="https://picsum.photos/100" class="church-img dragme" id="draggable" alt="">
       </div>
     </div>
 
-    <!--
-    <div class="container-fluid">
 
 
-    <div class="row align-items-center justify-content-center">
-    <div class="col-6 map">
+    <script src="drag.js">
 
-    </div>
-    <div class="col-4 justify-content-center">
-      <img src="https://picsum.photos/300" class="rounded " alt="">
-
-    </div>
-  </div>
-</div>
--->
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
