made js work with dragable images

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
   <body style = "background-color: #7FE57F;">
     <div class="rowcustom">
       <div class="map">
-        <img  style = "margin:300px;"src="https://picsum.photos/200" alt="">
+        <img class = "destination" style = "margin-top:150px;margin-left:400px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
+        <img class = "destination" style = "margin-top:200px;margin-left:200px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
+        <img class = "destination" style = "margin-top:200px;margin-left:50px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
+
       </div>
       <div class="img-flex">
-        <h1>SUZINOK DAUGIAU</h1>
-      <img src="https://picsum.photos/100" class="church-img dragme" id="draggable" alt="">
+        <h1 style = "margin:auto;display:block;">SUZINOK DAUGIAU</h1>
+      <img src="img/1.png"  class="church-img dragme" id="draggable" alt="">
+        <img src="img/2.png"  class="church-img dragme" id="draggable" alt="">
+          <img src="img/3.png"  class="church-img dragme" id="draggable" alt="">
+
       </div>
     </div>
 
