Added images and js

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <body style = "background-color: #7FE57F;">
     <div class="rowcustom">
       <div class="map">
-        <img class = "destination" style = "margin-top:150px;margin-left:400px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
-        <img class = "destination" style = "margin-top:200px;margin-left:200px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
-        <img class = "destination" style = "margin-top:200px;margin-left:50px;width: 150px;height:150px"src="https://picsum.photos/200" alt="">
+        <img class = "destination" style = "right: 50%"src="img/mag1.png" alt="">
+        <img class = "destination" style = "margin-top:200px;margin-left:200px;"src="img/mag2-removebg-preview.png" alt="">
+        <img class = "destination" style = "margin-top:200px;margin-left:50px;"src="img/mag2-removebg-preview.png" alt="">
 
       </div>
       <div class="img-flex">
-        <h1 style = "margin:auto;display:block;">SUZINOK DAUGIAU</h1>
+        <h1 style = "margin:auto;">SUZINOK DAUGIAU</h1>
       <img src="img/1.png"  class="church-img dragme" id="draggable" alt="">
         <img src="img/2.png"  class="church-img dragme" id="draggable" alt="">
           <img src="img/3.png"  class="church-img dragme" id="draggable" alt="">
