added all imgaes and made them work

--- a/index.html
+++ b/index.html
@@ -12,19 +12,58 @@
   </head>
   <body style = "background-color: #7FE57F;">
     <div class="rowcustom">
-      <div class="map">
-        <img class = "destination" style = "right: 50%"src="img/mag1.png" alt="">
-        <img class = "destination" style = "margin-top:200px;margin-left:200px;"src="img/mag2-removebg-preview.png" alt="">
-        <img class = "destination" style = "margin-top:200px;margin-left:50px;"src="img/mag2-removebg-preview.png" alt="">
+      <span class="map">
+        <img class = "destination" style = "left:895px; top:345px"src="img/mag1.png" alt="1">
+        <img class = "destination" style = "left:965px;top:210px"src="img/mag2-removebg-preview.png" alt="2">
+        <img class = "destination" style = "left:435px;top:420px"src="img/mag3-removebg-preview.png" alt="3">
+        <img class = "destination" style = "left:707px;top:610px"src="img/mag4-removebg-preview.png" alt="4">
+        <img class = "destination" style = "left:535px;top:385px"src="img/mag5-removebg-preview.png" alt="5">
+        <img class = "destination" style = "left:600px;top:645px"src="img/mag6-removebg-preview.png" alt="6">
+        <img class = "destination" style = "left:660px;top:610px"src="img/mag7-removebg-preview.png" alt="7">
+        <img class = "destination" style = "left:580px;top:500px"src="img/mag8-removebg-preview.png" alt="8">
+        <img class = "destination" style = "left:670px;top:730px"src="img/mag9-removebg-preview.png" alt="9">
+        <img class = "destination" style = "left:555px;top:640px"src="img/mag10-removebg-preview.png" alt="10">
+        <img class = "destination" style = "left:745px;top:605px"src="img/mag11-removebg-preview.png" alt="11">
+        <img class = "destination" style = "left:690px;top:790px"src="img/mag12-removebg-preview.png" alt="12">
+        <img class = "destination" style = "left:580px;top:610px"src="img/mag13-removebg-preview.png" alt="13">
+        <img class = "destination" style = "left:790px;top:780px"src="img/mag14-removebg-preview.png" alt="14">
+        <img class = "destination" style = "left:550px;top:690px"src="img/mag15-removebg-preview.png" alt="15">
+        <img class = "destination" style = "left:690px;top:690px"src="img/mag16-removebg-preview.png" alt="16">
+        <img class = "destination" style = "left:650px;top:790px"src="img/mag17-removebg-preview.png" alt="17">
+        <img class = "destination" style = "left:830px;top:210px"src="img/mag18-removebg-preview.png" alt="18">
+        <img class = "destination" style = "left:825px;top:645px"src="img/mag19-removebg-preview.png" alt="19">
+        <img class = "destination" style = "left:605px;top:210px"src="img/mag20-removebg-preview.png" alt="20">
+        <img class = "destination" style = "left:760px;top:740px"src="img/mag21-removebg-preview.png" alt="21">
+        <img class = "destination" style = "left:620px;top:570px"src="img/mag22-removebg-preview.png" alt="22">
+        <img class = "destination" style = "left:600px;top:770px"src="img/mag23-removebg-preview.png" alt="23">
+      </span>
+      <span class="img-flex">
 
-      </div>
-      <div class="img-flex">
-        <h1 style = "margin:auto;">SUZINOK DAUGIAU</h1>
-      <img src="img/1.png"  class="church-img dragme" id="draggable" alt="">
-        <img src="img/2.png"  class="church-img dragme" id="draggable" alt="">
-          <img src="img/3.png"  class="church-img dragme" id="draggable" alt="">
+      <img src="img/1.png"  class="church-img dragme" id="draggable" alt="1">
+      <img src="img/2.png"  class="church-img dragme" id="draggable" alt="2">
+      <img src="img/3.png"  class="church-img dragme" id="draggable" alt="3">
+      <img src="img/4.png"  class="church-img dragme" id="draggable" alt="4">
+      <img src="img/5.png"  class="church-img dragme" id="draggable" alt="5">
+      <img src="img/6.png"  class="church-img dragme" id="draggable" alt="6">
+      <img src="img/7.png"  class="church-img dragme" id="draggable" alt="7">
+      <img src="img/8.png"  class="church-img dragme" id="draggable" alt="8">
+      <img src="img/9.png"  class="church-img dragme" id="draggable" alt="9">
+      <img src="img/10.png"  class="church-img dragme" id="draggable" alt="10">
+      <img src="img/11.png"  class="church-img dragme" id="draggable" alt="11">
+      <img src="img/12.png"  class="church-img dragme" id="draggable" alt="12">
+      <img src="img/13.png"  class="church-img dragme" id="draggable" alt="13">
+      <img src="img/14.png"  class="church-img dragme" id="draggable" alt="14">
+      <img src="img/15.png"  class="church-img dragme" id="draggable" alt="15">
+      <img src="img/16.png"  class="church-img dragme" id="draggable" alt="16">
+      <img src="img/17.png"  class="church-img dragme" id="draggable" alt="17">
+      <img src="img/18.png"  class="church-img dragme" id="draggable" alt="18">
+      <img src="img/19.png"  class="church-img dragme" id="draggable" alt="19">
+      <img src="img/20.png"  class="church-img dragme" id="draggable" alt="20">
+      <img src="img/21.png"  class="church-img dragme" id="draggable" alt="21">
+      <img src="img/22.png"  class="church-img dragme" id="draggable" alt="22">
+      <img src="img/23.png"  class="church-img dragme" id="draggable" alt="23">
 
-      </div>
+      </span>
     </div>
 
 
