--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
      <link rel="stylesheet" href="master.css">
     <title>Game</title>
   </head>
-  <body style = "background-color: #7FE57F;">
+  <body>
+    <div class="top align-middle" id = "top">
+        <div class="container">
+          <img src="img/4.png" class="mx-auto text-center" alt="..." style = "margin-top: 80px;width: 500px; height:auto;opacity:1; display:block">
+            <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi vien bokštai.
+               Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
+            <button onclick = "document.getElementById('top').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block">Sudėliok jas miesto žemėlapyje</button>
+        </div>
+
+
+    </div>
     <div class="rowcustom">
       <span class="map">
         <img class = "destination" style = "left:895px; top:345px"src="img/mag1.png" alt="1">
@@ -37,6 +47,8 @@
         <img class = "destination" style = "left:620px;top:570px"src="img/mag22-removebg-preview.png" alt="22">
         <img class = "destination" style = "left:600px;top:770px"src="img/mag23-removebg-preview.png" alt="23">
       </span>
+      <h2 id = "imgheader">Sužinok daugiau</h2>
+      <h3 id = "findText">Rask šią bažnyčią</h3>
       <span class="img-flex">
 
       <img src="img/1.png"  class="church-img dragme" id="draggable" alt="1">
