fixed resizing issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="rowcustom">
       <span class="map">
-       <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:895px; top:345px"src="img/mag1.png" alt="1">
+       <img class = "destination" data-toggle="modal" data-target="#modal" style = "position: static;margin-left:895px; margin-top:345px"src="img/mag1.png" alt="1">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:965px;top:210px"src="img/mag2-removebg-preview.png" alt="2">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:435px;top:420px"src="img/mag3-removebg-preview.png" alt="3">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:707px;top:610px"src="img/mag4-removebg-preview.png" alt="4">
@@ -74,7 +74,7 @@
       <img data-toggle="modal"src="img/21.png"  class="church-img dragme" id="draggable" alt="21">
       <img data-toggle="modal"src="img/22.png"  class="church-img dragme" id="draggable" alt="22">
       <img data-toggle="modal"src="img/23.png"  class="church-img dragme" id="draggable" alt="23">
-
+      <img data-toggle="modal"src="img/23.png"  class="church-img dragme" id="hide" alt="hide">
       </span>
     </div>
 
