--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   </head>
   <body>
     <div class="top align-middle" id = "top">
-        <div class="container">
-          <img src="img/4.png" class="mx-auto text-center" alt="..." style = "margin-top: 80px;width: 500px; height:auto;opacity:1; display:block">
-            <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi vien bokštai.
+        <div  class="container">
+          <img src="img/4.png" class="mx-auto text-center" id = "main-img" alt="..." style = "margin-top: 40px;width: 500px; height:auto;opacity:1; display:block">
+            <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi - vien bokštai.
                Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
-            <button onclick = "document.getElementById('top').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block">Sudėliok jas miesto žemėlapyje</button>
+            <button onclick = "document.getElementById('top').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Sudėliok jas miesto žemėlapyje</button>
         </div>
 
 
     </div>
     <div class="rowcustom">
       <span class="map">
-       <img class = "destination" data-toggle="modal" data-target="#modal" style = "position: static;margin-left:895px; margin-top:345px"src="img/mag1.png" alt="1">
-        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:965px;top:210px"src="img/mag2-removebg-preview.png" alt="2">
+       <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:895px; top:345px"src="img/mag1.png" alt="1">
+        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:950px;top:210px"src="img/mag2-removebg-preview.png" alt="2">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:435px;top:420px"src="img/mag3-removebg-preview.png" alt="3">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:707px;top:610px"src="img/mag4-removebg-preview.png" alt="4">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:535px;top:385px"src="img/mag5-removebg-preview.png" alt="5">
@@ -40,15 +40,16 @@
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:550px;top:690px"src="img/mag15-removebg-preview.png" alt="15">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:690px;top:690px"src="img/mag16-removebg-preview.png" alt="16">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:650px;top:790px"src="img/mag17-removebg-preview.png" alt="17">
-        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:830px;top:210px"src="img/mag18-removebg-preview.png" alt="18">
+        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:830px;top:15px"src="img/mag18-removebg-preview.png" alt="18">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:825px;top:645px"src="img/mag19-removebg-preview.png" alt="19">
-        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:605px;top:210px"src="img/mag20-removebg-preview.png" alt="20">
+        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:605px;top:15px"src="img/mag20-removebg-preview.png" alt="20">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:760px;top:740px"src="img/mag21-removebg-preview.png" alt="21">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:620px;top:570px"src="img/mag22-removebg-preview.png" alt="22">
         <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:600px;top:770px"src="img/mag23-removebg-preview.png" alt="23">
       </span>
-      <h2 id = "imgheader">Sužinok daugiau</h2>
-      <h3 id = "findText">Rask šią bažnyčią</h3>
+
+      <button id = "imgheader"  data-toggle="modal" data-target="#modal" type="button" class="btn btn-dark mx-auto" >SUŽINOK DAUGIAU</button>
+      <h3 id = "findText">RASK ŠIĄ BAŽNYČIĄ! TURI TRIS BANDYMUS</h3>
       <span class="img-flex">
 
       <img data-toggle="modal"src="img/1.png"  class="church-img dragme" id="draggable" alt="1">
