added drag with mouse function

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
       </div>
     </div>
 
+
+    <script type="text/javascript">
+
+      var imgmove = false;
+    </script>
+
     <script src = "zoom.js">
 
     </script>
