added animations for the things

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script type="text/javascript">
 
       var imgmove = false;
+      var zoomed = false;
     </script>
 
     <script src = "zoom.js">
