ending screen done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 
 
     </div>
+
+
+    <div class="top align-middle" id = "top-end" style = "display: none;">
+        <div  class="container">
+
+            <h1 id = "end-text" class = "mx-auto text-center" style = "display:block;width:500px;opacity:1;margin-top: 300px; color: white;"></h1>
+            <button onclick = "window.location.reload();" type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Žaisti dar kartą</button>
+        </div>
+
+
+    </div>
+
+
+
     <div class="rowcustom">
       <div id = "map-parent" class="map-parent">
 
