--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
   </div>
       <button id = "imgheader"  data-toggle="modal" data-target="#modal" type="button" class="btn btn-dark mx-auto" >SUŽINOK DAUGIAU</button>
-      <h3 id = "findText">RASK ŠIĄ BAŽNYČIĄ! TURI TRIS BANDYMUS</h3>
+      <h3 id = "findText">RASK ŠIĄ BAŽNYČIĄ! TURI 3 BANDYMUS</h3>
       <span class="img-flex">
 
       <img data-toggle="modal"src="img/1.png"  class="church-img dragme" id="draggable" alt="1">
