--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
   </head>
   <body>
     <div class="top align-middle" id = "top">
-        <div  class="container">
-          <img src="img/4.png" class="mx-auto text-center" id = "main-img" alt="..." style = "margin-top: 40px;width: 400px; height:auto;opacity:1; display:block">
-            <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi - vien bokštai.
-               Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
-            <button onclick = "document.getElementById('top').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Sudėliok jas miesto žemėlapyje</button>
-        </div>
 
 
     </div>
-
+    <div id = "intro-cont" class="container-fluid" style = "position:absolute;z-index:1001">
+      <img src="img/4.png" class="mx-auto text-center" id = "main-img" alt="..." style = "margin-top: 40px;width: 400px; height:auto;opacity:1; display:block">
+        <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi - vien bokštai.
+           Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
+        <button onclick = "document.getElementById('top').style.display = 'none'; document.getElementById('intro-cont').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Sudėliok jas miesto žemėlapyje</button>
+    </div>
 
     <div class="top align-middle" id = "top-end" style = "display: none;">
         <div  class="container">
@@ -127,9 +126,6 @@
     </script>
 
     <script src = "zoom.js">
-
-    </script>
-    <script src = "query.js">
 
     </script>
     <script src="drag.js">
