--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
      <link rel="stylesheet" href="master.css">
     <title>Game</title>
-
+<script src="https://kit.fontawesome.com/50ae2c7fde.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="top align-middle" id = "top">
@@ -37,7 +37,9 @@
 
     <div class="rowcustom">
       <div id = "map-parent" class="map-parent">
-        <h5 id = "zoom-text" style = "position:absolute;z-index: 300;">Spustelkite 2 kartus priartinti vaizdą</h5>
+        <i id = "zoom-icon" class="fas fa-search-plus"></i>
+
+
 <!--465 -->
       <div id = "map-id" class="map">
        <img class = "destination" data-toggle="modal" data-target="#modal" style = "left:895px; top:320px"src="img/mag1.png" alt="1">
