added tablet support

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
     </div>
-    <div id = "intro-cont" class="container-fluid" style = "position:absolute;z-index:1001">
-      <img src="img/4.png" class="mx-auto text-center" id = "main-img" alt="..." style = "margin-top: 40px;width: 400px; height:auto;opacity:1; display:block">
+    <div id = "intro-cont" class="container-fluid" style = "top: 40px; position:absolute;z-index:1001">
+      <img src="img/4.png" class="mx-auto" id = "main-img" alt="..." style = "width: 400px; height:auto;opacity:1; display:block">
         <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi - vien bokštai.
            Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
         <button onclick = "document.getElementById('top').style.display = 'none'; document.getElementById('intro-cont').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Sudėliok jas miesto žemėlapyje</button>
