added descriptions to chruches

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
           </div>
           <div class="modal-body">
             <img  src="img/3.png" id = "modalImg" alt="" style = "width: 100%; height: auto;">
+            <p id = "desc1"></p>
+            <p id = "desc2"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Uždaryti</button>
