--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
             <h1 id = "end-text" class = "mx-auto text-center" style = "display:block;width:500px;opacity:1;margin-top: 300px; color: white;"></h1>
             <button onclick = "window.location.reload();" type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Žaisti dar kartą</button>
+            <img class="mx-auto" style = "margin-top: 20px;width: 600px;display:block" src="img/remejai.jpg" alt="">
         </div>
 
 
