change the error message

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
       <img data-toggle="modal"src="img/22.png"  class="church-img dragme" id="draggable" alt="22">
       <img data-toggle="modal"src="img/23.png"  class="church-img dragme" id="draggable" alt="23">
       <div  class="church-img dragme" id="hide" alt="hide"> </div>
+      <div onclick = "this.style.display = 'none'"  class="church-img dragme" id="failed" alt="failed">
+
+        <h2 id = "neteisingai">Neteisingai!</h2>
+          <h2 id ="church-id"></h2>
+            <h2>Spustelkite, kad vėl galėtumėte bandyti!</h2>
+      </div>
       </span>
     </div>
 
