--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div class="contents" style = "position:relative;">
         <img src="img/4.png" class="mx-auto" id = "main-img" alt="..." style = "width: 400px; height:auto;opacity:1; display:block">
-          <h1 class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi – vien bokštai.
+          <h1 id = "main-text" class = "mx-auto text-center" style = "display:block;width:500px;opacity:1; color: white;">Kur pažvelgsi – vien bokštai.
              Ar žinojai, kad beveik visos Vilnių puošiančios senosios bažnyčios kažkada priklausė vienuolynams?</h1>
           <button onclick = "document.getElementById('top').style.display = 'none'; document.getElementById('intro-cont').style.display = 'none';"type="button" class="btn btn-dark mx-auto" style = "width: 500px; display: block; font-size:25px">Sudėliok jas miesto žemėlapyje</button>
       </div>
@@ -108,7 +108,7 @@
 
         <h2 id = "neteisingai">Neteisingai!</h2>
           <h2 id ="church-id"></h2>
-            <h2>Spustelkite, kad vėl galėtumėte bandyti!</h2>
+            <h2>Spustelk ir bandyk dar kartą!</h2>
       </div>
       </span>
     </div>
